from xhtml to html

--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <title>iPressbook</title>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<link rel="shortcut icon" href="/themes/default/favicon.ico" />
-		<!-- XML prettify -->
-			<link href="/lib/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
-			<script type="text/javascript" src="/lib/google-code-prettify/prettify.js"></script>
+    <meta charset="UTF-8">
+		<link rel="shortcut icon" href="/themes/default/favicon.ico">
  		<!-- Theme -->
 			<!-- Default -->
-				<link rel="stylesheet" href="/themes/default/style.css" type="text/css"/>
-    <script type="text/javascript" src="/lib/microjungle.min.js"/>
-    <script type="text/javascript" src="/configuration.js"/>
-    <script type="text/javascript" src="/lib/lightstring/lightstring.js"/>
-    <script type="text/javascript" src="/lib/lightstring/md5.js"/>
-    <script type="text/javascript" src="/lib/lightstring/plugins.js"/>
+				<link rel="stylesheet" href="/themes/default/style.css" type="text/css">
+    <script type="text/javascript" src="/lib/microjungle.min.js"></script>
+    <script type="text/javascript" src="/configuration.js"></script>
+    <script type="text/javascript" src="/lib/lightstring/lightstring.js"></script>
+    <script type="text/javascript" src="/lib/lightstring/md5.js"></script>
+    <script type="text/javascript" src="/lib/lightstring/plugins.js"></script>
 
-		<script type="text/javascript" src="/plugsbee.js"/>
-		<script type="text/javascript" src="/userinterface.js"/>
+		<script type="text/javascript" src="/plugsbee.js"></script>
+		<script type="text/javascript" src="/userinterface.js"></script>
     
 		<!-- Widgets -->
 			<!-- Folder -->
-				<script type="text/javascript" src="/widgets/folder/folder.js"/>
-				<link rel="stylesheet" href="/widgets/folder/folder.css" type="text/css"/>
+				<script type="text/javascript" src="/widgets/folder/folder.js"></script>
+				<link rel="stylesheet" href="/widgets/folder/folder.css" type="text/css">
 			<!-- File -->
-				<script type="text/javascript" src="/widgets/file/file.js"/>
-				<link rel="stylesheet" href="/widgets/file/file.css" type="text/css"/>
+				<script type="text/javascript" src="/widgets/file/file.js"></script>
+				<link rel="stylesheet" href="/widgets/file/file.css" type="text/css">
     
 	</head>
 	<body>
