many changes so we don't need a http server anymore

--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
   <head>
     <title>iPressbook</title>
     <meta charset="UTF-8">
-		<link rel="shortcut icon" href="/themes/default/favicon.ico">
+		<link rel="shortcut icon" href="themes/default/favicon.ico">
  		<!-- Theme -->
 			<!-- Default -->
-				<link rel="stylesheet" href="/themes/default/style.css" type="text/css">
-    <script type="text/javascript" src="/lib/microjungle.min.js"></script>
-    <script type="text/javascript" src="/configuration.js"></script>
-    <script type="text/javascript" src="/lib/lightstring/lightstring.js"></script>
-    <script type="text/javascript" src="/lib/lightstring/md5.js"></script>
-    <script type="text/javascript" src="/lib/lightstring/plugins.js"></script>
+				<link rel="stylesheet" href="themes/default/style.css" type="text/css">
+    <script type="text/javascript" src="lib/microjungle.min.js"></script>
+    <script type="text/javascript" src="configuration.js"></script>
+    <script type="text/javascript" src="lib/lightstring/lightstring.js"></script>
+    <script type="text/javascript" src="lib/lightstring/md5.js"></script>
+    <script type="text/javascript" src="lib/lightstring/plugins.js"></script>
 
-		<script type="text/javascript" src="/plugsbee.js"></script>
-		<script type="text/javascript" src="/userinterface.js"></script>
+		<script type="text/javascript" src="plugsbee.js"></script>
+		<script type="text/javascript" src="userinterface.js"></script>
     
 		<!-- Widgets -->
 			<!-- Folder -->
-				<script type="text/javascript" src="/widgets/folder/folder.js"></script>
-				<link rel="stylesheet" href="/widgets/folder/folder.css" type="text/css">
+				<script type="text/javascript" src="widgets/folder/folder.js"></script>
+				<link rel="stylesheet" href="widgets/folder/folder.css" type="text/css">
 			<!-- File -->
-				<script type="text/javascript" src="/widgets/file/file.js"></script>
-				<link rel="stylesheet" href="/widgets/file/file.css" type="text/css">
+				<script type="text/javascript" src="widgets/file/file.js"></script>
+				<link rel="stylesheet" href="widgets/file/file.css" type="text/css">
     
 	</head>
 	<body>
 		<header>
+      <a id="toto" href="rgehr">iPressbook</span>
       <span class="title">iPressbook</span>
       <span class="account">John Do</span>
       <button id="logout">Logout</button>
