add a file on pubsub event

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 	</head>
 	<body>
 		<header>
+      
+<!--
+      <button onclick="shakeit();">shakeit</button>
+-->
       <div class="left">
         <a id="nav-button" href="/">Folders</a>
       </div>
