--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="shortcut icon" href="themes/default/favicon.ico">
+    <!-- Comment the following line if you are running Plugsbee withou web server (file://) -->
+<!--
     <base href="/"> 
+-->
  		<!-- Theme -->
 			<!-- Default -->
 				<link rel="stylesheet" href="themes/default/style.css" type="text/css">
+<!--
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
+-->
     <script type="text/javascript" src="configuration.js"></script>
     <script type="text/javascript" src="lib/microjungle.min.js"></script>
     <script type="text/javascript" src="lib/lightstring/lightstring.js"></script>
@@ -85,14 +91,16 @@
       </div>
     </section>
 		<section id="viewer" hidden="true">
+      <div id="preview"></div>
+      <a id="download">Download</a>
     </section>
     <input id="file-picker" type="file"/>
     <menu type="context" id="filemenu">
       <menuitem label="Delete" onclick="gUserInterface.deleteFile();">
       </menuitem>
+<!--
       <menuitem label="Rename" onclick="gUserInterface.renameFile();">
       </menuitem>
-<!--
       <menu label="Share">
         <menuitem label="twitter" onclick="alert('not yet')"></menuitem>
         <menuitem label="facebook" onclick="alert('not yet')"></menuitem>
@@ -102,9 +110,9 @@
     <menu type="context" id="foldermenu">
       <menuitem label="Delete" onclick="gUserInterface.deleteFolder();">
       </menuitem>
+<!--
       <menuitem label="Rename" onclick="gUserInterface.renameFolder();">
       </menuitem>
-<!--
       <menu label="Share">
         <menuitem label="twitter" onclick="alert('not yet')"></menuitem>
         <menuitem label="facebook" onclick="alert('not yet')"></menuitem>
