Switched from bowser to platform.js for browser detection.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="themes/default/icons/114x114.png"/>
 
     <!-- browser detection -->
-    <script type="text/javascript" src="lib/bowser/bowser.min.js"></script>
+    <script type="text/javascript" src="lib/platform.js/platform.js"></script>
     
     <!-- theme -->
     <link rel="stylesheet" href="themes/default/style.css" type="text/css">
@@ -46,13 +46,10 @@
     <script type="text/javascript" src="lib/lightstring/stanza.js"></script>
     <script type="text/javascript" src="lib/lightstring/md5.js"></script>
     <script type="text/javascript" src="lib/lightstring/plugins/disco.js"></script>
-    <script type="text/javascript" src="lib/lightstring/plugins/im.js"></script>
     <script type="text/javascript" src="lib/lightstring/plugins/presence.js"></script>
     <script type="text/javascript" src="lib/lightstring/plugins/pubsub.js"></script>
-    <script type="text/javascript" src="lib/lightstring/plugins/roster.js"></script>
     <script type="text/javascript" src="lib/lightstring/plugins/dataforms.js"></script>
     <script type="text/javascript" src="lib/lightstring/plugins/DIGEST-MD5.js"></script>
-    <script type="text/javascript" src="lib/lightstring/plugins/vcard.js"></script>
 
     <!-- content -->
     <script type="text/javascript" src="plugsbee.js"></script>
