--- a/index.xhtml
+++ b/index.xhtml
@@ -27,7 +27,7 @@
 <!--
     <script type="application/javascript" src="lib/modernizr.js"/>
 -->
-    <script type="application/javascript" src="lib/burger/burger.js"/>
+    <script type="application/javascript" src="burger/burger.js"/>
     <script type="application/javascript" src="lib/platform.js/platform.js"/>
     
     <!-- configuration -->
@@ -37,7 +37,7 @@
     <script type="application/javascript" src="lib/yepnope/yepnope.js"/>
 
     <!-- XML prettify -->
-    <script type="application/javascript" src="lib/vkbeautify.0.93.beta.js"/>
+    <script type="application/javascript" src="lib/vkbeautify.0.95.01.beta.js"/>
     <!--
     <link rel="stylesheet" href="lib/google-code-prettify/prettify.css" type="text/css"/>
     <script type="application/javascript" src="lib/google-code-prettify/prettify.js"/>
