--- a/index.xhtml
+++ b/index.xhtml
@@ -56,11 +56,9 @@
     <script type="application/javascript" src="lib/lightstring/plugins/DIGEST-MD5.js"/>
 
     <!-- Modules -->
-<!--
-    <script type="application/javascript" src="modules/http.js"/>
-    <script type="application/javascript" src="modules/storage.js"/>
-    <script type="application/javascript" src="modules/base64.js"/>
--->
+    <script type="application/javascript" src="burger/modules/http.js"/>
+    <script type="application/javascript" src="burger/modules/storage.js"/>
+    <script type="application/javascript" src="burger/modules/base64.js"/>
 
     <script type="application/javascript" src="widgets.js"/>
 
