--- a/index.xhtml
+++ b/index.xhtml
@@ -24,11 +24,11 @@
     </script>
     -->
     
-<!--
-    <script type="application/javascript" src="lib/modernizr.js"/>
--->
+   
+    <!-- Framework -->
     <script type="application/javascript" src="burger/burger.js"/>
-    <script type="application/javascript" src="lib/platform.js/platform.js"/>
+    <script type="application/javascript" src="burger/modules/test.js"/>
+    <script type="application/javascript" src="burger/lib/platform.js/platform.js"/>
     
     <!-- configuration -->
     <script type="application/javascript" src="configuration.js"/>
@@ -53,14 +53,7 @@
     <script type="application/javascript" src="lib/lightstring/plugins/presence.js"/>
     <script type="application/javascript" src="lib/lightstring/plugins/pubsub.js"/>
     <script type="application/javascript" src="lib/lightstring/plugins/dataforms.js"/>
-    <script type="application/javascript" src="lib/lightstring/plugins/DIGEST-MD5.js"/>
-
-    <!-- Modules -->
-    <script type="application/javascript" src="burger/modules/http.js"/>
-    <script type="application/javascript" src="burger/modules/storage.js"/>
-    <script type="application/javascript" src="burger/modules/base64.js"/>
-
-    <script type="application/javascript" src="widgets.js"/>
+    <script type="application/javascript" src="lib/lightstring/plugins/PLAIN.js"/>
 
     <!-- widgets -->
     <script type="application/javascript" src="widgets/thumbnail/thumbnail.js"/>
@@ -125,8 +118,6 @@
     </section>
     <section id="deck" hidden="hidden">
       <ul id="folders" class="panel"/>
-      <!-- Trash folder panel -->
-      <ul class="panel trash" hidden="true"/>
     </section>
     <section id="viewer" hidden="true">
       <div id="preview"></div>
