--- a/index.xhtml
+++ b/index.xhtml
@@ -26,9 +26,8 @@
     
    
     <!-- Framework -->
-    <script type="application/javascript" src="burger/burger.js"/>
-    <script type="application/javascript" src="burger/modules/test.js"/>
-    <script type="application/javascript" src="burger/lib/platform.js/platform.js"/>
+    <script type="application/javascript" src="lib/burger.js"/>
+    <script type="application/javascript" src="lib/platform.js/platform.js"/>
     
     <!-- configuration -->
     <script type="application/javascript" src="configuration.js"/>
