Files and folders renaming.

--- a/index.xhtml
+++ b/index.xhtml
@@ -71,9 +71,7 @@
   <body>
     <header>
       <div class="left"/>
-      <div class="center">
-        <span id="title">Plugsbee</span>
-      </div>
+      <div class="center"/>
       <div class="right"/>
     </header>
     <section id="welcome">
