yepnope added as a dependency

--- a/index.xhtml
+++ b/index.xhtml
@@ -33,7 +33,7 @@
     <script type="application/javascript" src="thumbnail.js"/>
     <script type="application/javascript" src="lib/platform.js/platform.js"/>
     <script type="application/javascript" src="lib/burger.js"/>
-    <script type="application/javascript" src="lib/yepnope/yepnope.js"/>
+    <script type="application/javascript" src="lib/yepnope.js/yepnope.js"/>
     
     <!-- configuration -->
     <script type="application/javascript" src="configuration.js"/>
