--- a/index.xhtml
+++ b/index.xhtml
@@ -30,7 +30,6 @@
    
     <!-- Framework -->
     <script type="application/javascript" src="SW.js"/>
-    <script type="application/javascript" src="thumbnail.js"/>
     <script type="application/javascript" src="lib/platform.js/platform.js"/>
     <script type="application/javascript" src="lib/burger.js"/>
     <script type="application/javascript" src="lib/yepnope.js/yepnope.js"/>
@@ -60,13 +59,14 @@
     <script type="application/javascript" src="lib/lightstring/plugins/PLAIN.js"/>
     
     <!-- Plugsbee -->
-    <script type="application/javascript" src="gStorage.js"/>
-    <script type="application/javascript" src="gRemote.js"/>
-    <script type="application/javascript" src="gInterface.js"/>
     <script type="application/javascript" src="userinterface.js"/>
     <script type="application/javascript" src="plugsbee.js"/>
     <script type="application/javascript" src="plugsbee.folder.js"/>
     <script type="application/javascript" src="plugsbee.file.js"/>
+    <script type="application/javascript" src="plugsbee.storage.js"/>
+    <script type="application/javascript" src="plugsbee.remote.js"/>
+    <script type="application/javascript" src="plugsbee.layout.js"/>
+    <script type="application/javascript" src="plugsbee.media.js"/>
 
     <!-- widgets -->
     <script type="application/javascript" src="widgets/thumbnail/thumbnail.js"/>
