multiple upload support

--- a/index.xhtml
+++ b/index.xhtml
@@ -116,7 +116,7 @@
         <button id="get-link">Get link</button>
       </section>
     </div>
-    <input id="file-picker" type="file"/>
+    <input id="file-picker" multiple="multiple" type="file"/>
     <div id="xmpp-console" hidden="hidden"/>
     <div id="dock" hidden="hidden"/>
   </body>
