use anonymous login by default

--- a/index.xhtml
+++ b/index.xhtml
@@ -28,6 +28,7 @@
     <script type="application/javascript" src="lib/lightstring/jid.js"/>
     <script type="application/javascript" src="lib/lightstring/stanza.js"/>
     <script type="application/javascript" src="lib/lightstring/md5.js"/>
+    <script type="application/javascript" src="lib/lightstring/plugins/ANONYMOUS.js"/>
     <script type="application/javascript" src="lib/lightstring/plugins/disco.js"/>
     <script type="application/javascript" src="lib/lightstring/plugins/presence.js"/>
     <script type="application/javascript" src="lib/lightstring/plugins/pubsub.js"/>
