fade in/out for the header title

--- a/index.xhtml
+++ b/index.xhtml
@@ -51,7 +51,11 @@
   <body>
     <header>
       <div class="left"/>
-      <div class="center"/>
+      <div class="middle">
+        <span data-name="title">Loading...</span>
+        <span data-name="trash" class="hidden">Trash</span>
+        <span data-name="account" class="hidden">Account</span>
+      </div>
       <div class="right"/>
     </header>
     <div id="deck">
