--- a/index.xhtml
+++ b/index.xhtml
@@ -134,6 +134,14 @@
         <p id="anonymous" hidden="hidden">You are not logged, everything you are uploading will be deleted as soon as you'll close Plugsbee.</p>
         <ul id="folders"></ul>
       </section>
+      <section data-name="edit-folder" id="edit-folder-panel" class="hidden">
+        <button id="delete-folder-button">Delete</button>
+        <button id="rename-folder-button">Rename</button>
+      </section>
+      <section data-name="edit-file" id="edit-file-panel" class="hidden">
+        <button id="delete-file-button">Delete</button>
+        <button id="rename-file-button">Rename</button>
+      </section>
     </div>
     <input id="file-picker" multiple="multiple" type="file"/>
     <div id="xmpp-console" hidden="hidden"/>
