proper syntax for boolean attributes

--- a/index.xhtml
+++ b/index.xhtml
@@ -65,11 +65,11 @@
           <div>
             <p>
               <label for="login-login" autofocus="autofocus">Login: </label>
-              <input name="login" id="login-login" type="text" placeholder="Your login" required=""/>
+              <input name="login" id="login-login" type="text" placeholder="Your login" required="required"/>
             </p>
             <p>
               <label for="password">Password: </label>
-              <input name="password" id="password" type="password" placeholder="********" required=""/>
+              <input name="password" id="password" type="password" placeholder="********" required="required"/>
             </p>
             <p id="remember-input">
               <label for="remember">Remember me <input type="checkbox" name="remember" id="remember" checked="checked"/></label>
@@ -92,7 +92,7 @@
           </p>
           <p>
             <label for="password-register">Password:</label>
-            <input name="password1" id="password-register" type="password" placeholder="********" required=""/>
+            <input name="password1" id="password-register" type="password" placeholder="********" required="required"/>
           </p>
           <p>
             <label for="confirm-register">Confirmation:</label>
@@ -161,7 +161,7 @@
           <button id="rename-folder-button" class="button grey">Rename</button>
           <p>
             <label for="edit-folder-name">Folder name:</label>
-            <input type="text" name="edit-folder-name" id="edit-folder-name" placeholder="Your folder name." required=""/>
+            <input type="text" name="edit-folder-name" id="edit-folder-name" placeholder="Your folder name." required="required"/>
           </p>
           <p>
             <label for="edit-folder-public">Public: <input type="checkbox" name="edit-folder-public" id="edit-folder-public"/></label>
@@ -178,7 +178,7 @@
           <button id="rename-file-button" class="button grey">Rename</button>
           <p>
             <label for="edit-file-name">File name:</label>
-            <input type="text" name="edit-file-name" id="edit-file-name" placeholder="Your file name." required=""/>
+            <input type="text" name="edit-file-name" id="edit-file-name" placeholder="Your file name." required="required"/>
           </p>
         </div>
       </section>
