--- a/index.xhtml
+++ b/index.xhtml
@@ -40,6 +40,7 @@
     <script type="application/javascript" src="plugsbee.js"/>
     <script type="application/javascript" src="plugsbee.layout.js"/>
     <script type="application/javascript" src="plugsbee.remote.js"/>
+    <script type="application/javascript" src="mimetypes.js"/>
 
     <!-- widgets -->
     <script type="application/javascript" src="widgets/thumbnail/thumbnail.js"/>
@@ -120,7 +121,7 @@
              }
            }
           </script>
-          <form id="account-form">
+          <form>
             <p>
               <label for="name">Name:</label><input type="text" id="name" name="name" placeholder="John Doe"/>
             </p>
