client-side thumbnails

--- a/index.xhtml
+++ b/index.xhtml
@@ -23,6 +23,7 @@
     -->
 
     <!-- XMPP / WebSocket -->
+    <script type="application/javascript" src="thumbnail.js"/>
     <script type="application/javascript" src="lib/lightstring/lightstring.js"/>
     <script type="application/javascript" src="lib/lightstring/polyfill.js"/>
     <script type="application/javascript" src="lib/lightstring/jid.js"/>
