--- a/index.xhtml
+++ b/index.xhtml
@@ -122,7 +122,7 @@
              }
            }
           </script>
-          <form>
+          <form id="account-form">
             <p>
               <label for="name">Name:</label><input type="text" id="name" name="name" placeholder="John Doe"/>
             </p>
